# fastapi-python

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 56bc153cd9de_create_users_table.py  5e7e6e6e5e1f_add_remark_in_user_table.py  73258f89d698_change_size_of_remark_in_user_table.py  f9eb03614a7f_create_users_table.py
app/api/: deps.py
app/controllers/: user_controller.py
app/core/: config.py  db_config.py
app/dao/: user_dao.py  users.py
app/db/: base.py  create_db.py  session.py
app/models/: __init__.py  user.py
app/response_handlers/: json_response_handler.py  validation_handler.py
app/routers/: user_router.py
app/schemas/: user.py  user_schema.py
fastapi_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
