[project]
name = "fastapi-app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi[standard]",
  "uvicorn[standard]",
  "pydantic-settings>=2",
  "SQLAlchemy>=2.0",
  "aiomysql>=0.2",           # async MySQL driver
  "alembic>=1.13",           # (optional) migrations
  "passlib[bcrypt]>=1.7",    # password hashing
  "python-dotenv>=1.0"
]

[tool.pytest.ini_options]
addopts = "-q"