[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "A FastAPI application"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = { version = "*", extras = ["standard"] }
uvicorn = { version = "*", extras = ["standard"] }
pydantic-settings = ">=2"
sqlalchemy = ">=2.0"
asyncmy = "^0.2.9"
alembic = ">=1.13"
passlib = { version = ">=1.7", extras = ["bcrypt"] }
python-dotenv = ">=1.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"